--- a/themes/neversawus/templates/page.html
+++ b/themes/neversawus/templates/page.html
@@ -5,46 +5,21 @@
     {% block header %}
         {{ super() }}
     {% endblock header %}
-
-<article itemscope itemtype="http://schema.org/BlogPosting">
-    <header>
-        <h1 itemprop="headline">{{ page.title }}</h1>
-        <span class="muted">{{ post_macros::meta(page=page) }}</span>
-    </header>
-    <div itemprop="articleBody">
-      {{ page.content | safe }}
-    </div>
-
-    {% block page_footer %}
-        <footer>
-            <hr>
-            <p>
-                {% if config.extra.author %}
-                    Published by {{ config.extra.author }}
-                {% endif %}
-                {% if page.taxonomies.categories %}
-                    {% set category = page.taxonomies.categories[0] %}
-                    in <a href="{{ get_taxonomy_url(kind="categories", name=category) | safe }}">{{ category }}</a>
-                {% endif %}
-                {% if page.taxonomies.tags %}
-                    and tagged
-                    {% for tag in page.taxonomies.tags %}
-                        <a href="{{ get_taxonomy_url(kind="tags", name=tag) | safe }}">{{ tag }}</a>
-                        {% if page.taxonomies.tags | length > 1 %}
-                            {% if loop.index != page.taxonomies.tags | length %}
-                                {% if loop.index == page.taxonomies.tags | length - 1 %}
-                                    and
-                                {% else %}
-                                    ,
-                                {% endif %}
-                            {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                {% endif %}
-            </p>
-        </footer>
-    {% endblock page_footer %}
-</article>
-
+    <main id="content">
+        <nav class="wrap">
+          <p>
+            {% if page.earlier %}
+              <a rel="prev" href="{{ page.earlier.permalink }}">Previous</a> |
+            {% endif %}
+            {% if page.updated %}<aside>{{ page.updated }}</aside>{% endif %}
+            {% if page.later %}
+              <a rel="next" href="{{ page.later.permalink }}">Next</a> |
+            {% endif %}
+          </p>
+        </nav>
+        <section class="wrap">
+          {{ page.content | safe }}
+        </section>
+    </main>
 {% endblock content %}
 
