reintroduce the triangle

--- a/themes/neversawus/sass/_style.scss
+++ b/themes/neversawus/sass/_style.scss
@@ -17,7 +17,7 @@ header:after {
     visibility:visible;
     height:16px;
     display:block;
-    background:repeat-x url('../img/triangle.png');
+    background:repeat-x url('/triangle.png');
     position:absolute;
     bottom:-16px;
     left:0px;
