--- a/themes/neversawus/sass/_style.scss
+++ b/themes/neversawus/sass/_style.scss
@@ -35,11 +35,11 @@ footer:before {
 footer a { color:white; }
 footer { text-align: center; margin-top: 3em; }
 
-footer > div { width:672px; margin:0pt auto; }
+footer > div { max-width:672px; padding: 16px; margin:0pt auto; }
 
 body { text-align:center; color:#636566; display: flex; flex-direction: column; min-height: 100vh; }
 main { flex: 1; }
-.wrap { margin: 16pt auto; width: 672px; text-align:left; }
+.wrap { margin: 16pt auto; max-width: 672px; padding: 16px; text-align:left; }
 
 a { color:#353835; text-decoration:none; border-bottom: 1px solid #999; padding-bottom:0.0166em; }
 a:hover { color:#141816; border-bottom: 1px solid #666; }
@@ -86,8 +86,8 @@ a[rel=next]:after {
 
 article > * { margin-bottom:1.5em; }
 
-pre { background-image: linear-gradient(90deg, rgb(128, 110, 110), white, white, black); padding:0.5em; overflow-x: scroll; background: #434142; color:#CECECB; /* box-shadow: 0px 0px 200px 10px #434343 inset; */ padding: 2em 0px; background: linear-gradient(126deg, rgb(106, 106, 106), #434142, #434142, rgb(33, 33, 33));}
-pre > code { width: 872px; margin:0pt auto; text-align:left; display:block; line-height: normal; text-anchor: baseline; /* background: #434142; */}
+pre { overflow-x: scroll; padding: 1em 0px; }
+pre > code { max-width: 872px; margin:0pt auto; text-align:left; display:block; text-anchor: baseline; }
 h1, h2, h3, h4 { line-height: 1.0em; margin-bottom:0.5em; margin-top:0.25em; position:relative; }
 hr { margin-bottom:1.5em; margin-top:1.5em; opacity:0.5; display: block; color: #EEE; }
 
