--- a/themes/neversawus/sass/_style.scss
+++ b/themes/neversawus/sass/_style.scss
@@ -153,4 +153,6 @@ p code { white-space:nowrap; }
 p + p { margin-top:1em; }
 section + section { padding-bottom: 1.64em; padding-top:1.333em; border-top:1px dotted #eee; }
 
+article > div > iframe { width: 100%; height: 33vh; }
+
 nav:after { content:' '; display: block; clear: both; }
