--- a/themes/neversawus/templates/section.html
+++ b/themes/neversawus/templates/section.html
@@ -1,5 +1,7 @@
 {% extends "index.html" %}
 
+{% block title %}{{ super() }}{% if page.title %} | {{ page.title }}{% endif %}{% endblock %}
+
 {% block content %}
     {% block header %}
         {{ super() }}
