--- a/themes/neversawus/templates/index.html
+++ b/themes/neversawus/templates/index.html
@@ -73,9 +73,9 @@
                 <h4><a href="/">NEVERSAW.US</a> is Chris Dickinson’s personal blog</h4>
                 <p>
                   <a href="/feed.xml" rel="rss">RSS</a>
+                  <a href="https://hachyderm.io/@isntitvacant" rel="me">@isntitvacant@hachyderm.io</a>
                   <a href="https://twitter.com/isntitvacant" rel="twitter">@isntitvacant</a>
                   <a href="https://github.com/chrisdickinson" rel="github">github.com/chrisdickinson</a>
-                  <a href="https://npmjs.com/~chrisdickinson" rel="npm">npm</a>
                 </p>
             </div>
         </footer>
