Re-style lists; add link template

--- a/themes/neversawus/templates/index.html
+++ b/themes/neversawus/templates/index.html
@@ -48,11 +48,13 @@
                   </p>
                 </nav>
 
-                <ul class="post-list">
+                <ul class="post-list wrap">
                 {% for page in paginator.pages %}
                     {{ post_macros::page_in_list(page=page) }}
                 {% endfor %}
                 </ul>
+
+                {% set section = get_section(path="links/_index.md") %}
 
                 <nav class="wrap">
                   <p>
