--- a/themes/neversawus/templates/post_macros.html
+++ b/themes/neversawus/templates/post_macros.html
@@ -17,7 +17,7 @@
 
 {% macro page_in_list(page) %}
     <li>
-        <h1><a href="{{ page.permalink | safe }}" title="{{ page.title }}">{{ page.title }}</a></h1>
+        <a href="{{ page.permalink | safe }}" title="{{ page.title }}">{{ page.title }}</a>
 
         {% if page.date %}
         <time datetime="{{ page.date | date(format="%F")}}">{{ page.date | date(format="%F")}}</time>
